# crawl

.github/workflows/: ci.yml
crawl-ref/: INSTALL.md
crawl-ref/source/: Makefile  ability-type.h  ability.cc  abyss.cc  acquire.cc  art-func.h  artefact.cc  attack.cc  attitude-change.cc  beam.cc  beh-type.h  bloodspatter.cc  branch-type.h  chardump.cc  cloud-type.h  cloud.cc  cloud.h  command.cc  corpse.cc  crash.cc  ctest.cc  dactions.cc  decks.cc  delay.cc  describe.cc  directn.cc  domino.h  dungeon-feature-type.h  enchant-type.h  equipment-slot.h  evoke.cc  externs.h  files.cc  fineff.cc  game-chapter.h  game-type.h  glwrapper-ogl.cc  god-abil.cc  god-companions.cc  god-passive.cc  (+93 more)
crawl-ref/source/MSVC/: crawl.vcxproj  tilegen.vcxproj
crawl-ref/source/contrib/MSVC/: SDL.vcxproj  SDL_image.vcxproj  SDLmain.vcxproj  freetype.vcxproj  libpng.vcxproj  lua.vcxproj  pcre.vcxproj  sqlite.vcxproj  zlib.vcxproj
crawl-ref/source/util/: gen-all.py  gen_ver.pl
crawl-ref/source/webserver/webtiles/: ws_handler.py
